# claude-win-notify

./: .gitignore  CLAUDE.md  Cargo.toml  RESEARCH.md
.claude/: settings.local.json
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-tech-spike/: 01-A-PLAN.md  01-A-SUMMARY.md  01-B-PLAN.md  01-B-SUMMARY.md  01-C-PLAN.md  01-C-SUMMARY.md  01-CONTEXT.md  01-D-PLAN.md  01-D-SUMMARY.md  01-E-PLAN.md  01-E-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-hook-toast/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-notification-types/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
spike/: README.md  RESULTS.md  focus-results.md  measure-startup.ps1  protocol-results.md  register-protocol.ps1  run-focus-test.ps1  test-focus.ps1  toast-results.md
spike/csharp/: CSharpSpike.csproj  Program.cs
spike/rust/: Cargo.toml
spike/rust/src/: main.rs
src/: assets.rs  cli.rs  error.rs  hook.rs  lib.rs  log.rs  main.rs  notification.rs  toast.rs
tests/: integration.rs  notification_types.rs
