[package]
name = "rust-spike"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "UI_Notifications",
    "Data_Xml_Dom",
]
